--- a/Runner/Satellites/sl/sl50/TestPage.html
+++ b/Runner/Satellites/sl/sl50/TestPage.html
@@ -55,20 +55,21 @@
         }
     </script>
 </head>
-<body>
-    <form id="form1" runat="server" style="height:100%">
-    <div id="silverlightControlHost">
-        <object data="data:application/x-silverlight-2," type="application/x-silverlight-2" width="100%" height="100%">
-          <param name="source" value="$$xappath$$"/>
-          <param name="InitParams" value="testurl=$$testurl$$,testplatform=$$testplatform$$,testdlls=$$testdlls$$"/>
-		  <param name="onError" value="onSilverlightError" />
-		  <param name="background" value="white" />
-		  <param name="minRuntimeVersion" value="5.0.61118.0" />
-		  <param name="autoUpgrade" value="true" />
-		  <a href="http://go.microsoft.com/fwlink/?LinkID=149156&v=5.0.61118.0" style="text-decoration:none">
- 			  <img src="http://go.microsoft.com/fwlink/?LinkId=161376" alt="Get Microsoft Silverlight" style="border-style:none"/>
-		  </a>
-	    </object><iframe id="_sl_historyFrame" style="visibility:hidden;height:0px;width:0px;border:0px"></iframe></div>
-    </form>
-</body>
+    <body>
+        <input type="hidden" name="output_results" id="output_results" value="">
+        <form id="form1" runat="server" style="height:100%">
+            <div id="silverlightControlHost">
+                <object data="data:application/x-silverlight-2," type="application/x-silverlight-2" width="100%" height="100%">
+                    <param name="source" value="$$xappath$$"/>
+                    <param name="InitParams" value="testalone=$$testalone$$,testurl=$$testurl$$,testplatform=$$testplatform$$,testdlls=$$testdlls$$"/>
+                    <param name="onError" value="onSilverlightError" />
+                    <param name="background" value="white" />
+                    <param name="minRuntimeVersion" value="5.0.61118.0" />
+                    <param name="autoUpgrade" value="true" />
+                    <a href="http://go.microsoft.com/fwlink/?LinkID=149156&v=5.0.61118.0" style="text-decoration:none">
+                        <img src="http://go.microsoft.com/fwlink/?LinkId=161376" alt="Get Microsoft Silverlight" style="border-style:none"/>
+                    </a>
+                </object><iframe id="_sl_historyFrame" style="visibility:hidden;height:0px;width:0px;border:0px"></iframe></div>
+        </form>
+    </body>
 </html>
